bk_ida/gccida/g2/find_split_point
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3402:6: error: use of undeclared identifier 'single_use'; did you mean 'single_set_2'?
rtx *single_use; // rax 
     ^~~~~~~~~~
     single_set_2
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/rtl.h:1470:12: note: 'single_set_2' declared here
extern rtx single_set_2                 PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3402:5: error: invalid operands to binary expression ('struct rtx_def *' and 'rtx (rtx, rtx)' (aka 'struct rtx_def *(struct rtx_def *, struct rtx_def *)'))
rtx *single_use; // rax 
~~~ ^~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3403:4: error: expected ';' after expression
rtx v37; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3403:5: error: use of undeclared identifier 'v37'
rtx v37; // rcx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3415:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v49; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3426:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v60; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3433:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v67; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3435:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v69; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3448:4: error: expected ';' after expression
rtx v82; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3448:5: error: use of undeclared identifier 'v82'
rtx v82; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3449:4: error: expected ';' after expression
rtx v83; // r13 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3449:5: error: use of undeclared identifier 'v83'
rtx v83; // r13 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3459:4: error: expected ';' after expression
rtx v93; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3459:5: error: use of undeclared identifier 'v93'
rtx v93; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3462:4: error: expected ';' after expression
rtx v96; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3462:5: error: use of undeclared identifier 'v96'
rtx v96; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3464:4: error: expected ';' after expression
rtx desta; // [rsp+0h] [rbp-58h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3464:5: error: use of undeclared identifier 'desta'; did you mean 'dest'?
rtx desta; // [rsp+0h] [rbp-58h] 
    ^~~~~
    dest
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3463:18: note: 'dest' declared here
 struct rtx_def *dest; // [rsp+0h] [rbp-58h] 
                 ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/combine.c:3466:4: error: expected ';' after expression
rtx destc; // [rsp+0h] [rbp-58h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/find_split_point/src/obj/combine.o] Error 1
